chore:(WIP) add intersection observer for youtube video

--- a/apps/website/src/app/components/home-page/sections/how-we-do-it/how-we-do-it.component.html
+++ b/apps/website/src/app/components/home-page/sections/how-we-do-it/how-we-do-it.component.html
@@ -33,10 +33,11 @@
             </div>
             <div class="d-none d-lg-block col-lg-5 align-self-center">
                 <div>
+                    <!-- TODO: Intersection observer start video -->
                     <iframe width="560" height="315" class="iframe img-fluid"
-                        src="https://www.youtube.com/embed/eZClhYwU7Qc?si=Ls2D9vZ8QOB8Jw-h&amp;controls=0"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        src="https://www.youtube.com/embed/eZClhYwU7Qc?start=210;controls=0&mute=1&showinfo=0&rel=0&autoplay=1&loop=1"
+                        title=" YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
             </div>
