chore:(components) add components to the home page

--- a/apps/website/src/app/components/home-page/home-page.component.html
+++ b/apps/website/src/app/components/home-page/home-page.component.html
@@ -1,42 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand me-3" href="#">
-            <img src="/assets/images/logo.svg" alt="Clutter Free Finds Logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Company
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">About Us</a></li>
-                        <li><a class="dropdown-item" href="#">Client Intake</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Resources
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Guide</a></li>
-                        <li><a class="dropdown-item" href="#">Checklist</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Store</a>
-                </li>
-            </ul>
-            <button class="btn" type="button">Get A Free Quote</button>
-        </div>
-    </div>
-</nav>
+<cff-v2-header></cff-v2-header>
+<main class="d-flex flex-column" style="row-gap: 50px;">
+    <cff-v2-hero></cff-v2-hero>
+    <cff-v2-what-we-do></cff-v2-what-we-do>
+    <cff-v2-why-cff></cff-v2-why-cff>
+    <cff-v2-the-process></cff-v2-the-process>
+    <cff-v2-our-community></cff-v2-our-community>
+    <cff-v2-how-we-do-it></cff-v2-how-we-do-it>
+    <cff-v2-faq-section></cff-v2-faq-section>
+</main>
+<cff-v2-footer></cff-v2-footer>
