update: import for shared footer

--- a/apps/website/src/app/components/home-page/home-page.component.html
+++ b/apps/website/src/app/components/home-page/home-page.component.html
@@ -8,4 +8,4 @@
     <cff-v2-how-we-do-it></cff-v2-how-we-do-it>
     <cff-v2-faq-section></cff-v2-faq-section>
 </main>
-<cff-v2-footer></cff-v2-footer>
+<clutterfreefinds-v2-footer></clutterfreefinds-v2-footer>
