--- a/apps/website/src/app/components/header/header.component.scss
+++ b/apps/website/src/app/components/header/header.component.scss
@@ -1,5 +1,8 @@
 nav {
   background: var(--light);
+  position: fixed;
+  width: 100%;
+  z-index: 2;
   .nav-item a {
     font-weight: 600;
     font-size: 0.9rem;
