--- a/apps/website/src/app/components/home-page/sections/hero/hero.component.html
+++ b/apps/website/src/app/components/home-page/sections/hero/hero.component.html
@@ -1,5 +1,5 @@
-<section class="mx-4 mx-lg-0" style="margin-top: 16px">
-    <div class="container cff-v2-hero-section p-3 p-lg-5">
+<section class="mx-4 mx-lg-0" style="margin-top: 100px">
+    <div class="container cff-v2-hero-section p-3 p-lg-5 mb-5">
         <div class="row">
             <div class="col-12 col-lg-7 d-flex flex-column align-items-center align-items-lg-start">
                 <div class="cff-v2-hero-section-title">
