--- a/apps/website/mfe/src/app/components/home-page/sections/why-cff/why-cff.component.html
+++ b/apps/website/mfe/src/app/components/home-page/sections/why-cff/why-cff.component.html
@@ -1,24 +1,16 @@
-<section class="mx-4 mx-lg-0" style="margin-top: 16px">
+<section style="margin-top: 16px">
   <div class="container cff-v2-why-cff-section p-3 p-lg-5">
     <div class="row align-items-center">
       <div>
-        <img
-          src="/assets/images/shapes.svg"
-          alt=""
-          class="img-fluid"
-          width="200"
-        />
+        <img src="/assets/images/shapes.svg" alt="" class="img-fluid d-none d-lg-block" width="200" />
       </div>
-      <div
-        class="col d-flex flex-column align-items-center align-items-lg-start"
-        style="max-width: 673px"
-      >
+      <div class="col d-flex flex-column align-items-center align-items-lg-start" style="max-width: 673px">
         <div class="cff-v2-why-cff-section-title">
           <div class="cff-v2-why-cff-section-title-text">
             {{ 'HOME_PAGE.WHY_CFF.TITLE' | translate }}
             <span class="title-gradient">{{
               'HOME_PAGE.WHY_CFF.GRADIENT' | translate
-            }}</span>
+              }}</span>
           </div>
         </div>
         <div class="cff-v2-why-cff-section-description">
@@ -28,7 +20,7 @@
           <button class="btn primary-btn" type="button">
             <a target="_blank" href="">{{
               'HOME_PAGE.WHY_CFF.BUTTON_1' | translate
-            }}</a>
+              }}</a>
           </button>
           <button class="btn link-btn" type="button">
             <a href="">{{ 'HOME_PAGE.WHY_CFF.BUTTON_2' | translate }}</a>
@@ -36,11 +28,7 @@
         </div>
       </div>
       <div class="d-none d-lg-block col align-self-center">
-        <img
-          src="/assets/images/why-clutter-free-finds.png"
-          alt=""
-          class="img-fluid"
-        />
+        <img src="/assets/images/why-clutter-free-finds.png" alt="" class="img-fluid" />
       </div>
     </div>
   </div>
