--- a/apps/website/mfe/src/app/components/faq-section/faq-section.component.html
+++ b/apps/website/mfe/src/app/components/faq-section/faq-section.component.html
@@ -5,24 +5,15 @@
   <div class="accordion d-flex flex-column mx-auto" id="accordionFaq">
     <ng-container *ngFor="let question of questions; index as index">
       <div class="accordion-item">
-        <div class="accordion-header" [id]="'faq' + (index + 1)">
-          <button
-            class="accordion-button"
-            type="button"
-            data-bs-toggle="collapse"
-            [attr.data-bs-target]="'#collapse' + (index + 1)"
-            aria-expanded="false"
-            [attr.aria-controls]="'#collapse' + (index + 1)"
-          >
+        <div class="accordion-header" [id]="'faqHeading' + (index + 1)">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            [attr.data-bs-target]="'#collapse' + (index + 1)" aria-expanded="false"
+            [attr.aria-controls]="'#collapse' + (index + 1)">
             {{ question.question | translate }}
           </button>
         </div>
-        <div
-          [id]="'collapse' + (index + 1)"
-          class="accordion-collapse collapse"
-          [attr.aria-labelledby]="'faq' + (index + 1)"
-          data-bs-parent="#accordionFaq"
-        >
+        <div [id]="'collapse' + (index + 1)" class="accordion-collapse collapse"
+          [attr.aria-labelledby]="'faqHeading' + (index + 1)" data-bs-parent="#accordionFaq">
           <div class="accordion-body">
             {{ question.answer | translate }}
           </div>
