--- a/apps/website/mfe/src/app/components/home-page/sections/the-process/the-process.component.html
+++ b/apps/website/mfe/src/app/components/home-page/sections/the-process/the-process.component.html
@@ -1,6 +1,6 @@
-<section class="mx-4 mx-lg-0" style="margin-top: 16px">
+<section style="margin-top: 16px">
   <div>
-    <div class="cff-v2-the-process-section-title">
+    <div class="cff-v2-the-process-section-title mx-auto">
       {{ 'HOME_PAGE.THE_PROCESS.TITLE' | translate }}
     </div>
     <div class="cff-v2-the-process-section-description mx-auto">
@@ -9,14 +9,11 @@
   </div>
   <div class="container cff-v2-the-process-section p-3 p-lg-5">
     <div class="row cff-v2-the-process-section-process position-relative">
-      <div class="line z-1"></div>
+      <div class="line z-1 d-none d-lg-block"></div>
       <ng-container *ngFor="let process of processes">
-        <div class="col-3 z-2">
+        <div class="col-12 col-md-6 col-lg-3 z-2 d-flex align-items-center flex-column" style=" margin-bottom: 18px;">
           <div>
-            <img
-              [src]="'assets/images/' + process.image"
-              [alt]="process.description | translate"
-            />
+            <img [src]="'assets/images/' + process.image" [alt]="process.description | translate" class="img-fluid" />
           </div>
           <div class="d-flex flex-column align-items-center">
             <div class="cff-v2-the-process-section-number">
@@ -33,10 +30,7 @@
       </ng-container>
     </div>
     <div class="row align-items-center">
-      <div
-        class="col d-flex flex-column align-items-center align-items-lg-start"
-        style="max-width: 673px"
-      >
+      <div class="col d-flex flex-column align-items-center align-items-md-start" style="max-width: 673px">
         <div class="cff-v2-the-process-section-title">
           <div class="cff-v2-the-process-section-title-text">
             {{ 'HOME_PAGE.THE_PROCESS.INTAKE_FORM.TITLE' | translate }}
@@ -45,15 +39,11 @@
         <div class="cff-v2-the-process-section-list">
           <ng-container *ngFor="let item of [1, 2, 3, 4]">
             <div class="list-item mb-3">
-              <img
-                alt="clutter free finds services"
-                src="/assets/icons/completed.svg"
-                width="18"
-              />
+              <img alt="clutter free finds services" src="/assets/icons/completed.svg" width="18" />
               <span>
                 {{
-                  'HOME_PAGE.THE_PROCESS.INTAKE_FORM.LIST.ITEM' + item
-                    | translate
+                'HOME_PAGE.THE_PROCESS.INTAKE_FORM.LIST.ITEM' + item
+                | translate
                 }}
               </span>
             </div>
@@ -63,26 +53,16 @@
           <button class="btn primary-btn" type="button">
             <a target="_blank" href="">{{
               'HOME_PAGE.THE_PROCESS.BUTTON' | translate
-            }}</a>
+              }}</a>
           </button>
-          <span
-            class="cff-v2-the-process-section-support-text d-flex align-items-center"
-          >
-            <img
-              src="assets/icons/shield.svg"
-              alt="clutter free finds client privacy"
-              class="me-1"
-            />
+          <span class="cff-v2-the-process-section-support-text d-flex align-items-center">
+            <img src="assets/icons/shield.svg" alt="clutter free finds client privacy" class="me-1" />
             {{ 'HOME_PAGE.THE_PROCESS.SUPPORT_TEXT' | translate }}
           </span>
         </div>
       </div>
-      <div class="d-none d-lg-block col align-self-center">
-        <img
-          src="/assets/videos/living-room-organizing.gif"
-          alt="Living Room organizing"
-          class="img-fluid"
-        />
+      <div class="d-none d-md-block col align-self-center" style="border-radius: 16px;">
+        <img src="/assets/videos/living-room-organizing.gif" alt="Living Room organizing" class="img-fluid" />
       </div>
     </div>
   </div>
