--- a/apps/website/mfe/src/app/components/home-page/sections/what-we-do/what-we-do.component.html
+++ b/apps/website/mfe/src/app/components/home-page/sections/what-we-do/what-we-do.component.html
@@ -1,12 +1,11 @@
 <section style="margin-top: 64px">
   <div>
     <div class="cff-v2-what-we-do-title">
-      <span class="d-none d-lg-inline-flex me-1">{{
+      <span class="d-inline-flex me-1">{{
         'HOME_PAGE.WHAT_WE_DO.TITLE' | translate
-      }}</span
-      ><span class="title-gradient">{{
+        }}</span><span class="title-gradient">{{
         'HOME_PAGE.WHAT_WE_DO.GRADIENT' | translate
-      }}</span>
+        }}</span>
     </div>
     <div class="cff-v2-what-we-do-description mx-auto">
       {{ 'HOME_PAGE.WHAT_WE_DO.DESCRIPTION' | translate }}
@@ -15,13 +14,8 @@
   <div class="d-flex mx-auto row justify-content-center" style="gap: 40px">
     <ng-container *ngFor="let servie of services">
       <a
-        class="card col-12 col-lg-4 cff-v2-what-we-do-card border-0 d-flex flex-column align-items-center justify-content-between"
-      >
-        <img
-          alt="clutter free finds services"
-          class="img-fluid"
-          [src]="servie.image"
-        />
+        class="card col-12 col-lg-4 cff-v2-what-we-do-card border-0 d-flex flex-column align-items-center justify-content-between">
+        <img alt="clutter free finds services" class="img-fluid" [src]="servie.image" />
         <span class="cff-v2-what-we-do-card-header">
           {{ servie.title | translate }}
         </span>
@@ -31,10 +25,7 @@
         </div>
         <button class="btn link-btn d-flex" type="button">
           <span> {{ 'HOME_PAGE.WHAT_WE_DO.LINK' | translate }}</span>
-          <img
-            alt="learn more about clutter free finds"
-            src="./assets/icons/arrow-right.svg"
-          />
+          <img alt="learn more about clutter free finds" src="./assets/icons/arrow-right.svg" />
         </button>
       </a>
     </ng-container>
