--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -23,6 +23,9 @@
   --didot-italic: 'Didot Italic', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   font-family: var(--didot);
   color: var(--dark);
 }
