chore: add cff language switcher

--- a/apps/website/mfe/src/app/components/header/header.component.html
+++ b/apps/website/mfe/src/app/components/header/header.component.html
@@ -39,6 +39,7 @@
           <a class="nav-link active" aria-current="page" href="#">Store</a>
         </li>
       </ul>
+      <cff-language></cff-language>
       <button class="btn primary-btn" type="button">
         <a target="_blank" href="">{{ 'HEADER.BUTTON_1' | translate }}</a>
       </button>
