--- a/apps/website/mfe/src/app/components/home-page/home-page.component.html
+++ b/apps/website/mfe/src/app/components/home-page/home-page.component.html
@@ -7,5 +7,6 @@
   <cff-v2-our-community></cff-v2-our-community>
   <cff-v2-how-we-do-it></cff-v2-how-we-do-it>
   <cff-v2-faq-section></cff-v2-faq-section>
+  <wc-how-it-works></wc-how-it-works>
 </main>
 <clutterfreefinds-v2-footer></clutterfreefinds-v2-footer>
