--- a/apps/website/mfe/src/app/components/home-page/sections/hero/hero.component.html
+++ b/apps/website/mfe/src/app/components/home-page/sections/hero/hero.component.html
@@ -40,7 +40,7 @@
       </div>
     </div>
   </div>
-  <div class="d-flex flex-column flex-md-row align-items-center justify-content-center"
+  <div class="d-flex flex-column flex-wrap flex-md-row align-items-center justify-content-center"
     style="column-gap: 16px; row-gap: 6px">
     <ng-container *ngFor="let statistic of statistics">
       <div class="cff-v2-hero-section-numbers">
