refactor: anchor tag should not open in new tab

--- a/apps/website/mfe/src/app/components/home-page/sections/how-we-do-it/how-we-do-it.component.html
+++ b/apps/website/mfe/src/app/components/home-page/sections/how-we-do-it/how-we-do-it.component.html
@@ -27,7 +27,7 @@
         </div>
         <div class="d-flex flex-column flex-md-row align-items-center">
           <button class="btn primary-btn" type="button">
-            <a target="_blank" href="">{{
+            <a href="">{{
               'HOME_PAGE.HOW_WE_DO_IT.BUTTON' | translate
               }}</a>
           </button>
