--- a/apps/website/mfe/src/app/components/home-page/sections/hero/hero.component.scss
+++ b/apps/website/mfe/src/app/components/home-page/sections/hero/hero.component.scss
@@ -1,12 +1,8 @@
-.cff-v2-hero-section {
-  border-radius: 8px;
-  border-bottom: 1px solid var(--accent);
-  border-left: 1px solid var(--accent);
-  background: linear-gradient(
-    104.05deg,
-    rgba(166, 149, 179, 0) 0%,
-    rgba(174, 131, 218, 0.3) 57.66%
-  );
+.cff-v2-hero-section-title {
+  @media (max-width: 575px) {
+    text-align: center;
+    margin-bottom: 24px;
+  }
 }
 .cff-v2-hero-section-title-text {
   margin-bottom: 24px;
@@ -14,7 +10,6 @@
   font-size: 64px;
   line-height: 130%;
   @media (max-width: 575px) {
-    text-align: center;
     font-size: 36px;
   }
 }
@@ -82,5 +77,14 @@
   }
   @media (max-width: 575px) {
     font-size: 40px;
+  }
+}
+
+.slider {
+  max-height: 450px !important;
+  overflow: hidden;
+
+  @media (max-width: 575.98px) {
+    max-height: 350px !important;
   }
 }
