--- a/apps/website/mfe/src/app/components/header/header.component.html
+++ b/apps/website/mfe/src/app/components/header/header.component.html
@@ -40,9 +40,9 @@
         </li>
       </ul>
       <cff-language></cff-language>
-      <button class="btn primary-btn" type="button">
-        <a target="_blank" href="">{{ 'HEADER.BUTTON_1' | translate }}</a>
-      </button>
+      <a href="/" class="btn primary-btn" type="button">
+        {{ 'HEADER.BUTTON_1'| translate }}
+      </a>
     </div>
   </div>
 </nav>
