Revert "3 instant quotation to phone or email"

--- a/apps/website/mfe/src/app/components/home-page/sections/what-we-do/what-we-do.component.html
+++ b/apps/website/mfe/src/app/components/home-page/sections/what-we-do/what-we-do.component.html
@@ -25,7 +25,7 @@
         </div>
         <button class="btn link-btn d-flex" type="button">
           <span> {{ 'HOME_PAGE.WHAT_WE_DO.LINK' | translate }}</span>
-          <img alt="learn more about clutter free finds" src="./assets/icons/arrow-right.svg" width="24" height="24" />
+          <img alt="learn more about clutter free finds" src="./assets/icons/arrow-right.svg" />
         </button>
       </a>
     </ng-container>
