--- a/apps/website/mfe/src/app/components/header/header.component.html
+++ b/apps/website/mfe/src/app/components/header/header.component.html
@@ -39,10 +39,9 @@
           <a class="nav-link active" aria-current="page" href="#">Store</a>
         </li>
       </ul>
-      <cff-language></cff-language>
-      <a href="/" class="btn primary-btn" type="button">
-        {{ 'HEADER.BUTTON_1'| translate }}
-      </a>
+      <button class="btn primary-btn" type="button">
+        <a target="_blank" href="">{{ 'HEADER.BUTTON_1' | translate }}</a>
+      </button>
     </div>
   </div>
 </nav>
