--- a/libs/shared/footer/src/lib/footer/footer.component.html
+++ b/libs/shared/footer/src/lib/footer/footer.component.html
@@ -1,5 +1,5 @@
 <section class="container-fluid py-3 pt-lg-5 px-5">
-    <div class="px-lg-5 ">
+    <div class="px-lg-5 position-relative">
         <div class="row">
             <div class="col-12 col-xl-5 col-lg-5 col-md-6">
                 <div class="d-flex flex-column mt-3 mb-3" style="max-width: 430px">
@@ -68,18 +68,30 @@
                                 </div>
                             </button>
                         </div>
-                        <div class="mt-2"> {{ newsletterMessage }}</div>
+                        <div class="toast-container position-absolute p-3 bottom-0 end-0" id="toastPlacement"
+                            data-original-class="toast-container position-absolute p-3">
+                            <div class="toast fade" #toastRef aria-live="polite" aria-atomic="true">
+                                <div class="toast-header">
+                                    <div class="me-auto text-dark">{{newsletterTitle | translate}}
+                                    </div>
+                                </div>
+                                <div class="toast-body text-dark">
+                                    {{ newsletterMessage }}
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </form>
             </div>
             <div class="col-12 col-xl-5 col-lg-5">
                 <div class="row mt-3">
-                    <ng-container *ngFor="let ctaLink of footerCTA; first as isFirst">
-                        <div *ngIf="isFirst; else notFirst" class="col-12 col-xl-6 col-lg-6 col-md-4 mb-3">
-                            <div (click)="copyToClipboard()"
-                                class="d-inline-flex contact-section align-items-center w-100 h-100  position-relative"
-                                #tooltipRef="matTooltip" [matTooltip]="(emailTooltip$ | async)| translate"
-                                matTooltipPosition="above" style="gap: 16px">
+                    <div *ngFor="let ctaLink of footerCTA; first as isFirst"
+                        class="col-12 col-xl-6 col-lg-6 col-md-6 mb-3">
+                        <div *ngIf="isFirst; else notFirst" class="w-100">
+                            <div (click)="copyToClipboard()" data-bs-toggle="tooltip" data-bs-placement="top"
+                                class="d-inline-flex contact-section align-items-center h-100 w-100 border-0"
+                                #tooltipRef [attr.data-bs-original-title]="(emailTooltip$ | async)| translate"
+                                style="gap: 16px">
                                 <img [src]="'assets/icons/' + ctaLink.image + '.svg'" alt="" width="45" height="45" />
                                 <div class="d-flex flex-column" style="gap: 9px">
                                     <p class="cta-title text-break">{{ ctaLink.title | translate }}</p>
@@ -88,7 +100,7 @@
                             </div>
                         </div>
                         <ng-template #notFirst>
-                            <div class="col-12 col-xl-6 col-lg-6 col-md-4 mb-3">
+                            <div class="w-100">
                                 <a *ngIf="!isFirst" class="d-inline-flex contact-section align-items-center h-100 w-100"
                                     [href]="ctaLink.link" target="_blank" rel="noopener" style="gap: 16px">
                                     <img [src]="'assets/icons/' + ctaLink.image + '.svg'" alt="" width="45"
@@ -100,7 +112,7 @@
                                 </a>
                             </div>
                         </ng-template>
-                    </ng-container>
+                    </div>
                 </div>
             </div>
         </div>
