chore:style that changes the color accent to purple

--- a/apps/website/mfe/src/app/components/header/header.component.scss
+++ b/apps/website/mfe/src/app/components/header/header.component.scss
@@ -5,7 +5,7 @@ nav {
     border: 0;
     &:focus {
       outline: 0;
-      box-shadow: 0 0 0 0.25rem rgba(var(--accent-rgb), 0.25);
+      box-shadow: 0 0 0 0.25rem rgba(var(--purple-rgb), 0.25);
     }
   }
 }
