--- a/apps/website/mfe/src/app/components/header/section/pricing-table/pricing-table.component.html
+++ b/apps/website/mfe/src/app/components/header/section/pricing-table/pricing-table.component.html
@@ -106,7 +106,7 @@
 												width="20" height="20" /></ng-template>
 										<ng-template [ngSwitchCase]="'any-badge'"><img class="any-badge me-2" alt=""
 												width="24" height="24" /></ng-template>
-										<ng-template ngSwitchDefault><span style="color: var(--accent);
+										<ng-template ngSwitchDefault><span style="color: var(--purple);
 											font-weight: 400;
 											font-size: 14px;
 											line-height: 21px;
