--- a/apps/website/mfe/src/app/components/home-page/sections/the-process/the-process.component.scss
+++ b/apps/website/mfe/src/app/components/home-page/sections/the-process/the-process.component.scss
@@ -1,8 +1,8 @@
 .cff-v2-the-process-section {
   max-width: 1056px;
   border-radius: 8px;
-  border-bottom: 1px solid var(--purple);
-  border-left: 1px solid var(--purple);
+  border-bottom: 1px solid var(--accent);
+  border-left: 1px solid var(--accent);
   background: linear-gradient(
     104.05deg,
     rgba(166, 149, 179, 0) 0%,
@@ -78,7 +78,7 @@
   margin-top: 24px;
   width: 30px;
   height: 30px;
-  background: var(--purple);
+  background: var(--accent);
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
