--- a/apps/website/mfe/src/app/components/faq-section/faq-section.component.scss
+++ b/apps/website/mfe/src/app/components/faq-section/faq-section.component.scss
@@ -18,7 +18,7 @@ section {
   row-gap: 16px;
 
   .accordion-item {
-    background: rgba(var(--purple-rgb), 0.07);
+    background: rgba(var(--accent-rgb), 0.07);
     border: none !important;
     border-radius: 16px;
     padding: 20px 10px;
