--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -12,6 +12,7 @@
 :root {
   /**Colors
   */
+  --green: #00b428;
   --purple: #7a23d3;
   --purple-rgb: 122, 35, 211;
   --fade-purple: #f2e4ff;
@@ -125,4 +126,13 @@ a {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+.circle-check-green {
+  width: 18px;
+  height: 18px;
+  background-color: var(--green);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
