--- a/apps/website/mfe/src/app/components/home-page/sections/hero/hero.component.html
+++ b/apps/website/mfe/src/app/components/home-page/sections/hero/hero.component.html
@@ -1,7 +1,7 @@
 <section style="margin-top: 100px">
   <div class="container-fluid cff-v2-hero-section p-3 p-md-5 mb-5">
     <div class="row align-items-center" style="row-gap: 24px;">
-      <div class="col-12 col-lg-6 d-flex flex-column align-items-center align-items-md-start">
+      <div class="col-12 col-lg-5 d-flex flex-column align-items-center align-items-md-start">
         <div class="cff-v2-hero-section-title">
           <span class="cff-v2-hero-section-title-text">
             {{ 'HOME_PAGE.HERO_SECTION.TITLE' | translate }}
@@ -16,8 +16,10 @@
         </div>
         <div class="cff-v2-hero-section-list">
           <ng-container *ngFor="let item of [1, 2, 3, 4]">
-            <div class="list-item mb-3">
-              <img alt="clutter free finds services" src="/assets/icons/completed.svg" />
+            <div class="list-item d-flex align-items-center mb-3" style="column-gap: 6px;">
+              <div class="circle-check-green"> <img alt="clutter free finds services"
+                  src="/assets/icons/check-light.svg" width="10" />
+              </div>
               <span>
                 {{ 'HOME_PAGE.HERO_SECTION.LIST.ITEM' + item | translate }}
               </span>
