--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import 'bootstrap/scss/bootstrap';
+@import 'ngx-toastr/toastr';
+
 @font-face {
   font-family: 'Didot';
   src: url(assets/fonts/Didot-HTF-M24-Medium.woff2);
@@ -26,6 +28,8 @@
   --black: #1c1b1f;
   --luminous-green: #7bf5c7;
   --luminous-green-rgb: 123, 245, 199;
+  --red: #eb0f26;
+  --red-rgb: 235, 15, 38;
 
   /*Fonts*/
   --didot: 'Didot', 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -36,7 +40,6 @@
   margin: 0;
   padding: 0;
   font-family: var(--didot);
-  color: var(--dark);
 }
 a {
   text-decoration: none;
