--- a/apps/website/mfe/src/app/components/home-page/home-page.component.html
+++ b/apps/website/mfe/src/app/components/home-page/home-page.component.html
@@ -1,12 +1,12 @@
 <cff-v2-header></cff-v2-header>
 <main role="main" class="d-flex flex-column container">
-  <!-- <cff-v2-hero></cff-v2-hero>
+  <cff-v2-hero></cff-v2-hero>
   <cff-v2-what-we-do></cff-v2-what-we-do>
   <cff-v2-why-cff></cff-v2-why-cff>
   <cff-v2-the-process></cff-v2-the-process>
   <cff-v2-our-community></cff-v2-our-community>
   <cff-v2-how-we-do-it></cff-v2-how-we-do-it>
   <cff-v2-faq-section></cff-v2-faq-section>
-  <wc-how-it-works></wc-how-it-works> -->
+  <wc-how-it-works></wc-how-it-works>
 </main>
 <clutterfreefinds-v2-footer></clutterfreefinds-v2-footer>
