chore:initialize instant quote component

--- a/libs/instant-quote/src/lib/instant-quote/instant-quote.component.html
+++ b/libs/instant-quote/src/lib/instant-quote/instant-quote.component.html
@@ -1,1 +1,58 @@
-<p>instant-quote works!</p>
+<main role="main" class="d-flex flex-column container mx-auto">
+    <div class=" row" style="  row-gap: 24px;">
+        <div class="col-12 d-flex align-items-center justify-content-center">
+            <div>Quotation Estimate</div>
+            <div>1 / 2</div>
+            <div>Validate Quotation</div>
+        </div>
+        <div class="col-12 col-lg-5"><iframe src="https://koalendar.com/e/have-us-call-you?embed=true" width="100%"
+                height="800px" frameborder="0" class="calendar-border"></iframe></div>
+        <div class="col-12 col-lg-7">
+            <div class="row">
+                <div class="col-12 col-lg-10">
+                    <div class="estimate-price">KSH 0.00-0.00</div>
+                    <div class="estimate-price-info">Estimated price range may be inaccurate,<br>
+                        Please complete the process to receive a final quote</div>
+                </div>
+                <div class="col-12 col-lg-2">
+                    <div class="hours-header">Hours</div>
+                    <div class="input-hours">
+                        <input type="number" name="" id="" value="3">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2 step-number">Step 1:</div>
+                <div class="col-9 step-header">Select a service </div>
+                <div class="col-1 step-complete">done</div>
+                <div class="col-12 service-step-content">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2 step-number">Step 1:</div>
+                <div class="col-9 step-header">Select a service </div>
+                <div class="col-1 step-complete">done</div>
+                <div class="col-12 space-step-content">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2 step-number">Step 1:</div>
+                <div class="col-9 step-header">Select a service </div>
+                <div class="col-1 step-complete">done</div>
+                <div class="col-12 product-step-content">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2 step-number">Step 1:</div>
+                <div class="col-9 step-header">Select a service </div>
+                <div class="col-1 step-complete">done</div>
+                <div class="col-12 information-step-content">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
