--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -40,7 +40,7 @@
         </li>
       </ul>
       <cff-language></cff-language>
-      <a href="/" class="btn primary-btn" type="button">
+      <a href="/instant-quote" class="btn primary-btn" type="button">
         {{ 'HEADER.BUTTON_1'| translate }}
       </a>
     </div>
